--- a/students.html
+++ b/students.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <header>
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-md navbar-dark mb-4">
@@ -51,140 +52,195 @@
             </div>
         </nav>
     </header>
-
-    <div id="schedules-header">
-        <h1 id="schedules-header-title">
-            <span>Учебни разписания</span>
-        </h1>
-    </div>
-    <div id="schedules">
-        <div class="row">
-            <!-- бакалавър -->
-            <div class="col">
-                <div class="card">
-                    <h3 class="schedule-card-heading">Бакалавър</h3>
-                    <div class="row">
-                        <div class="col">Информатика</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
+    <div class="container pt-1">
+        <div id="schedules-header">
+            <h1 id="schedules-header-title">
+                <span>Учебни разписания</span>
+            </h1>
+        </div>
+        <div id="schedules">
+            <div class="row">
+                <!-- бакалавър -->
+                <div class="col">
+                    <div class="card">
+                        <h3 class="schedule-card-heading text-center">Бакалавър</h3>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">Информатика</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
                         </div>
-                        <div class="col"><a href="#">Архив</a></div>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">Бизнес ИТ</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                        </div>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">СТ и дизайн</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                        </div>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">Софтуерно инженерство</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                        </div>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">Математика</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                        </div>
+                        <div class="row m-2">
+                            <div class="col d-flex justify-content-start">Приложна математика</div>
+                            <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">1. курс</button>
+                                <button type="button" class="btn btn-outline-primary">2. курс</button>
+                                <button type="button" class="btn btn-outline-primary">3. курс</button>
+                                <button type="button" class="btn btn-outline-primary">4. курс</button>
+                            </div>
+                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col">Бизнес ИТ</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
+                </div>
+                <!-- магистър -->
+                <div class="col">
+                    <div class="card">
+                        <h3 class="schedule-card-heading text-center">Магистър</h3>
+                        <div class="row m-2">
+                            <div>
+                                Софтуерни технологии със специализация софтуерни архитектури и средства
+                            </div>
+                            <div class="row">
+                                <div class="col btn-group">
+                                    <button type="button" class="btn btn-outline-primary">1-годишен</button>
+                                    <button type="button" class="btn btn-outline-primary">2-годишен</button>
+                                </div>
+                                <div class="col">
+                                    <a href="#">Архив</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col"><a href="#">Архив</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">СТ и дизайн</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
+                        <div class="row m-2">
+                            <div>
+                                Софтуерни технологии със специализация мобилни системи и приложения
+                            </div>
+                            <div class="row">
+                                <div class="col btn-group">
+                                    <button type="button" class="btn btn-outline-primary">1-годишен</button>
+                                    <button type="button" class="btn btn-outline-primary">2-годишен</button>
+                                </div>
+                                <div class="col">
+                                    <a href="#">Архив</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col"><a href="#">Архив</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">Софтуерно инженерство</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
+                        <div class="row m-2">
+                            <div>
+                                Софтуерни технологии със специализация графични среди и потребителски интерфейси
+                            </div>
+                            <div class="row">
+                                <div class="col btn-group">
+                                    <button type="button" class="btn btn-outline-primary">1-годишен</button>
+                                    <button type="button" class="btn btn-outline-primary">2-годишен</button>
+                                </div>
+                                <div class="col">
+                                    <a href="#">Архив</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col"><a href="#">Архив</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">Математика</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
-                        </div>
-                        <div class="col"><a href="#">Архив</a></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">Приложна математика</div>
-                        <div class="col btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-outline-primary">1. курс</button>
-                            <button type="button" class="btn btn-outline-primary">2. курс</button>
-                            <button type="button" class="btn btn-outline-primary">3. курс</button>
-                            <button type="button" class="btn btn-outline-primary">4. курс</button>
-                        </div>
-                        <div class="col"><a href="#">Архив</a></div>
                     </div>
                 </div>
             </div>
-            <!-- магистър -->
-            <div class="col">
-                <div class="card">
-                    <h3 class="schedule-card-heading">Магистър</h3>
-                    <div class="row">
-                        <div class="row">
-                            Софтуерни технологии със специализация софтуерни архитектури и средства
-                        </div>
-                        <div class="row">
-                            <div class="col btn-group">
-                                <button type="button" class="btn btn-outline-primary">1-годишен</button>
-                                <button type="button" class="btn btn-outline-primary">2-годишен</button>
-                            </div>
-                            <div class="col">
-                                <a href="#">Архив</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="row">
-                            Софтуерни технологии със специализация мобилни системи и приложения
-                        </div>
-                        <div class="row">
-                            <div class="col btn-group">
-                                <button type="button" class="btn btn-outline-primary">1-годишен</button>
-                                <button type="button" class="btn btn-outline-primary">2-годишен</button>
-                            </div>
-                            <div class="col">
-                                <a href="#">Архив</a>
+
+        </div>
+
+        <div class="mt-5">
+            <div id="others-header">
+                <h1 id="others-header-title">
+                    <span>Други</span>
+                </h1>
+            </div>
+            <div id="others">
+                <div class="row justify-content-center">
+                    <div class="col">
+                        <div class="card rounded-0 card-admission">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0">Докторантури
+                                            </h5>
+                                        </a></div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="row">
-                            Софтуерни технологии със специализация графични среди и потребителски интерфейси
-                        </div>
-                        <div class="row">
-                            <div class="col btn-group">
-                                <button type="button" class="btn btn-outline-primary">1-годишен</button>
-                                <button type="button" class="btn btn-outline-primary">2-годишен</button>
+                    <div class="col">
+                        <div class="card rounded-0 card-admission">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0">Курсове
+                                            </h5>
+                                        </a></div>
+                                </div>
+
                             </div>
-                            <div class="col">
-                                <a href="#">Архив</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-0 card-admission">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0">Избираеми дисциплини</h5>
+                                        </a></div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-0 card-admission">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0">Платформи за онлайн обучение</h5>
+                                        </a></div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
-    <div id="others-header">
-        <h1 id="others-header-title">
-            <span>Други</span>
-        </h1>
-    </div>
-    <div id="others">
-
-    </div>
 </body>
 
 </html>
