fixed margins in students.html

--- a/students.html
+++ b/students.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg">
 
     <header>
         <!-- Navbar  -->
@@ -52,6 +52,7 @@
             </div>
         </nav>
     </header>
+
     <div class="container pt-1">
         <div id="schedules-header">
             <h1 id="schedules-header-title">
@@ -62,8 +63,8 @@
             <div class="row">
                 <!-- бакалавър -->
                 <div class="col">
-                    <div class="card">
-                        <h3 class="schedule-card-heading text-center">Бакалавър</h3>
+                    <div class="card p-3">
+                        <h3 class="schedule-card-heading text-center mb-3">Бакалавър</h3>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Информатика</div>
                             <div class="col-7 btn-group" role="group" aria-label="Basic outlined example">
@@ -72,7 +73,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Бизнес ИТ</div>
@@ -82,7 +83,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">СТ и дизайн</div>
@@ -92,7 +93,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Софтуерно инженерство</div>
@@ -102,7 +103,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Математика</div>
@@ -112,7 +113,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Приложна математика</div>
@@ -122,16 +123,16 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col d-flex justify-content-end"><a href="#">Архив</a></div>
+                            <div class="col text-center"><a href="#">Архив</a></div>
                         </div>
                     </div>
                 </div>
                 <!-- магистър -->
                 <div class="col">
-                    <div class="card">
-                        <h3 class="schedule-card-heading text-center">Магистър</h3>
+                    <div class="card p-3">
+                        <h3 class="schedule-card-heading text-center mb-3">Магистър</h3>
                         <div class="row m-2">
-                            <div>
+                            <div class="mb-2">
                                 Софтуерни технологии със специализация софтуерни архитектури и средства
                             </div>
                             <div class="row">
@@ -139,13 +140,13 @@
                                     <button type="button" class="btn btn-outline-primary">1-годишен</button>
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
-                                <div class="col">
+                                <div class="col text-center">
                                     <a href="#">Архив</a>
                                 </div>
                             </div>
                         </div>
                         <div class="row m-2">
-                            <div>
+                            <div class="mb-2">
                                 Софтуерни технологии със специализация мобилни системи и приложения
                             </div>
                             <div class="row">
@@ -153,13 +154,13 @@
                                     <button type="button" class="btn btn-outline-primary">1-годишен</button>
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
-                                <div class="col">
+                                <div class="col text-center">
                                     <a href="#">Архив</a>
                                 </div>
                             </div>
                         </div>
                         <div class="row m-2">
-                            <div>
+                            <div class="mb-2">
                                 Софтуерни технологии със специализация графични среди и потребителски интерфейси
                             </div>
                             <div class="row">
@@ -167,7 +168,7 @@
                                     <button type="button" class="btn btn-outline-primary">1-годишен</button>
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
-                                <div class="col">
+                                <div class="col text-center">
                                     <a href="#">Архив</a>
                                 </div>
                             </div>
@@ -185,54 +186,58 @@
                 </h1>
             </div>
             <div id="others">
-                <div class="row justify-content-center">
+                <div class="row">
                     <div class="col">
-                        <div class="card rounded-0 card-admission">
+                        <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col"><a href="#" class="card-link">
-                                            <h5 class="card-title font-weight-bold p-0">Докторантури
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Докторантури</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Курсове</h5>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card rounded-2 h-100">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col"><a href="#" class="card-link">
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Избираеми дисциплини
                                             </h5>
-                                        </a></div>
+                                        </a>
+                                    </div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card rounded-0 card-admission">
+                        <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col"><a href="#" class="card-link">
-                                            <h5 class="card-title font-weight-bold p-0">Курсове
+                                            <h5 class="card-title font-weight-bold p-0 text-center">Платформи за онлайн
+                                                обучение
                                             </h5>
-                                        </a></div>
+                                        </a>
+                                    </div>
                                 </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card rounded-0 card-admission">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
-                                            <h5 class="card-title font-weight-bold p-0">Избираеми дисциплини</h5>
-                                        </a></div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card rounded-0 card-admission">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
-                                            <h5 class="card-title font-weight-bold p-0">Платформи за онлайн обучение</h5>
-                                        </a></div>
-                                </div>
-
                             </div>
                         </div>
                     </div>
