--- a/admission.html
+++ b/admission.html
@@ -36,7 +36,7 @@
       crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg">
     <header>
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-md navbar-dark mb-4">
